# Rustchain

./: .env.dev.example  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  API_WALKTHROUGH.md  AUDIT_REPORT.md  BATTLESHIP_PROGRESS.md  BCOS.md  BEACON_ATLAS_API.md  BOUNTY.md  BOUNTY_1149_TRACK_A.md  BOUNTY_2276_REPLAY_DEFENSE.md  BOUNTY_2279_BOTTUBE_DIGEST_BOT.md  BOUNTY_2286_IMPLEMENTATION.md  BOUNTY_2293_BCOS_HOMEBREW.md  BOUNTY_2296_RED_TEAM_ATTESTATION_REPLAY.md  BOUNTY_2298_RISCV_MINER_PORT.md  BOUNTY_2301_IMPLEMENTATION.md  BOUNTY_2314_GHOST_MACHINE.md  BOUNTY_2859_TYPESCRIPT_MCP.md  BOUNTY_32_IMPLEMENTATION.md  BOUNTY_674_IMPLEMENTATION.md  BOUNTY_683_AUTO_MATCH.md  BOUNTY_683_DISPUTE_RESOLUTION.md  BOUNTY_754_SUMMARY.md  BOUNTY_CLAIM.md  BOUNTY_CLAIM_73.md  BOUNTY_CONTRIBUTION.md  BOUNTY_Share_Why_You_Starred_RustChain.md  CAMPAIGN.md  CHANGELOG.md  CLAUDE.md  COMMERCIAL.md  CONSULTING.md  CONTRIBUTING.md  CONTRIBUTING_BOUNTIES.md  CONTRIBUTORS.md  CPU_ANTIQUITY_SYSTEM.md  (+628 more)
.github/: CODEOWNERS  (+6 more)
bounties/bounty_macos_75/src/: CMakeLists.txt  macos_validator.c  macos_validator.h
mcp/rustchain_server/: README.md  pyproject.toml  rustchain_mcp.py
miners/rust/: .gitignore  Cargo.toml  README.md  ppa_bypass_demo.py
miners/rust/src/: api.rs  attestation.rs  fingerprint.rs  hardware.rs  main.rs  ppa_spoofer.rs  types.rs
rips/: .gitignore  Cargo.toml  DEEP_ENTROPY_README.md  DELIVERY_SUMMARY.md  IMPLEMENTATION.md  ISSUE_734_REWORK.md  RIP-302-README.md  RUST_MINER.md
rips/benches/: entropy_bench.rs
rips/docs/: AGENT_REPUTATION_GUIDE.md  RIP-0001-proof-of-antiquity.md  RIP-0006-agent-reputation.md  RIP-0007-entropy-fingerprinting.md  RIP-0202-fail-closed-producer-enrollment.md  RIP-0301-tip-credits-atlas-economy.md  RIP-0302-cross-epoch-reputation.md  RIP-0308-proof-of-physical-ai.md  RIP-0310-proof-of-provenance.md  RIP-0683-console-bridge-integration.md
rips/python/rustchain/: __init__.py  async_client.py  client.py  core_types.py  deep_entropy.py  fleet_immune_system.py  governance.py  identity.py  models.py  node.py  proof_of_antiquity.py  reputation_system.py  rip201_server_patch.py
rips/reference/: __init__.py  rip0301_atlas_deed_atomicity.py
rips/rustchain-core/: RUSTCHAIN_PROOF_OF_ANTIQUITY.md  agent_relationships.py  bcos_badge_generator.py  bottube_embed.py  contributor_registry.py  faucet.py  init_contributor_db.py  install_testnet.sh  main.py  otc_bridge.py  payout_ledger.py  sophia_api.py
rips/rustchain-core/api/: rpc.py  test_rpc.py
rips/rustchain-core/bridge/: bridge_api.py
rips/rustchain-core/config/: chain_params.py
rips/rustchain-core/consensus/: poa.py
rips/rustchain-core/entropy/: entropy_g4_mirror_door_125.json  entropy_g5_dual_130.json  entropy_g5_dual_130_fixed.json  entropy_macintel_mac14-3_m2_mini.json  entropy_powerbook_g4_115.json  quantum_entropy_g4_125.json
rips/src/: a2a_badges.rs  agent_reputation.rs  core_types.rs  deep_entropy.rs  ergo_bridge.rs  governance.rs  lib.rs  miner_client.rs  network.rs  nft_badges.rs  proof_of_antiquity.rs  timer.rs
rips/templates/: RIP-TEMPLATE.md
rips/tests/: integration_tests.rs  test_agent_reputation.rs
rustchain-address-tool/: Cargo.toml  README.md
rustchain-address-tool/src/: lib.rs  main.rs  validate.rs
rustchain-bounties-mcp/: README.md  pyproject.toml
rustchain-bounties-mcp/rustchain_bounties_mcp/: __init__.py  client.py  mcp_server.py  schemas.py
rustchain-bounties-mcp/tests/: __init__.py  test_client_miners.py  test_mcp_server.py  test_schemas.py
rustchain-fingerprint/: .gitignore  CROSS_COMPILE.md  Cargo.toml  README.md
rustchain-fingerprint/benches/: fingerprint_bench.rs
rustchain-fingerprint/src/: anti_emulation.rs  cache_timing.rs  clock_drift.rs  device_oracle.rs  instruction_jitter.rs  lib.rs  simd_identity.rs  thermal_drift.rs
rustchain-miner/: .env.example  Cargo.toml  README.md  README_RISCV.md  cross.toml
rustchain-miner/.cargo/: config.toml
rustchain-miner/core/: Cargo.toml
rustchain-miner/docs/: RISCV.md  security_guidelines.md
rustchain-miner/scripts/: build_riscv.sh  cross-pre-build-riscv.sh
rustchain-miner/src/: arch_tests.rs  attestation.rs  cli.rs  config.rs  error.rs  hardware.rs  lib.rs  local_state.rs  main.rs  miner.rs  payload.rs  state_backup.rs  transport.rs
rustchain-miner/tests/: test_security.rs
rustchain-py/: LICENSE  README.md  pyproject.toml  test_sdk.py
rustchain-py/examples/: basic_usage.py
rustchain-py/rustchain/: __init__.py  client.py  exceptions.py  exceptions.py.bak  transaction.py  wallet.py
rustchain-py/tests/: test_rustchain.py
rustchain_miner/: Cargo.toml  build.rs
rustchain_miner/src/: main.rs
sdk/: README.md  agent_economy_cli.py  agent_economy_sdk.py  pyproject.toml  rustchain_agent_cli.py  setup.py  test_sdk.py  verify_path_implementation.py
sdk/beacon-integration/: README.md  rustchain_beacon.py  setup.py
sdk/cli/: README.md  package.json
sdk/discord-bot/: README.md  package.json
sdk/docs/: BOTTUBE_SDK.md
sdk/examples/: path_optimization_example.py
sdk/go/: README.md  go.mod
sdk/java/: README.md  pom.xml
sdk/javascript/: README.md  package.json
sdk/langchain/: README.md  rustchain_langchain.py  setup.py
sdk/mcp/: README.md  package.json
sdk/python/: README.md  pyproject.toml  setup.py  test_bottube.py  test_epoch_parser.py  test_rustchain_sdk.py
sdk/rustchain/: __init__.py  async_client.py  client.py  exceptions.py  path.py
sdk/rustchain_sdk/: __init__.py  client.py  exceptions.py  models.py
sdk/tests/: test_agent_economy.py  test_async_client.py  test_bounty_claims_sdk.py  test_client.py  test_client_unit.py  test_path.py  test_path_integration.py
sdk/utils/: README.md  package.json
sdk/wallet-cli/: README.md  setup.py
tools/floppy-witness/: Cargo.toml  README.md  ascii-header.txt
tools/python-sdk/: README.md  pyproject.toml  setup.py
tools/rustchain-address-validator/: Cargo.toml  README.md
tools/rustchain-cli/: Cargo.toml  README.md
tools/rustchain-wallet/: pyproject.toml
wasm-miner/: Cargo.toml
wasm-miner/src/: lib.rs
(+4385 files in other folders)
