# SPDX-License-Identifier: MIT
[package]
name = "rustchain-miner"
version = "0.1.0"
edition = "2021"
authors = ["Scottcjn <scott@rustchain.org>"]
description = "Native Rust implementation of RustChain universal miner"
license = "MIT"
repository = "https://github.com/Scottcjn/Rustchain"
keywords = ["blockchain", "miner", "cryptocurrency", "ed25519"]
categories = ["cryptography", "network-programming"]

[dependencies]
ed25519-dalek = "2.1"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
clap = { version = "4.4", features = ["derive"] }
uuid = { version = "1.6", features = ["v4"] }
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "sysinfoapi", "processthreadsapi"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
raw-cpuid = "11.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
