[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-wallet-cli"
version = "1.0.0"
description = "Command-line wallet for RustChain — BIP39, Ed25519, AES-256-GCM keystore"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.8"
keywords = ["rustchain", "wallet", "cli", "blockchain", "ed25519", "bip39"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
fast-crypto = [
    "PyNaCl>=1.5",
    "cryptography>=41.0",
]

[project.scripts]
rustchain-wallet = "rustchain_wallet_cli.cli:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/RustChain"
Repository = "https://github.com/jasontodd0877-cloud/rustchain-dialup"
Issues = "https://github.com/Scottcjn/rustchain-bounties/issues/39"
