[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain"
version = "2.2.1"
description = "RustChain — Proof of Antiquity blockchain with hardware fingerprinting + RTC token"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Scott Boudreaux / Elyan Labs", email = "scottbphone12@gmail.com"},
]
dependencies = [
    "flask>=2.0",
    "requests>=2.28",
    "cryptography>=41",
    "pynacl>=1.5",
    "psutil>=5.9",
    "openapi-spec-validator>=0.7,<0.8",
]

[project.scripts]
rustchain-compat = "compatibility_lab.cli:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/Rustchain"
Repository = "https://github.com/Scottcjn/Rustchain"
Issues = "https://github.com/Scottcjn/Rustchain/issues"

[tool.setuptools]
packages = ["node", "compatibility_lab"]

[tool.setuptools.package-data]
"node" = ["*.sql", "*.json"]
"compatibility_lab" = ["read_only_api.openapi.json", "fixtures/*.json"]
