[package]
name = "rustchain-core"
version = "0.2.0"
edition = "2021"
authors = ["Flamekeeper Scott <scott@rustchain.net>", "Sophia Elya"]
description = "RustChain Core - Proof of Antiquity blockchain that rewards vintage hardware preservation"
license = "MIT"
repository = "https://github.com/rustchain/rustchain-core"
keywords = ["blockchain", "vintage", "hardware", "proof-of-antiquity", "crypto"]
categories = ["cryptography", "hardware-support"]

[dependencies]
# Cryptography
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3"
ed25519-dalek = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Networking
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Hardware info
sysinfo = "0.30"

# CLI
clap = { version = "4.0", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = "0.4"

[features]
default = []
network = []
full = ["network"]

[lib]
name = "rustchain"
path = "src/lib.rs"

[[bin]]
name = "rustchain-node"
path = "src/bin/node.rs"

[[bin]]
name = "rustchain-miner"
path = "src/bin/miner.rs"

[dev-dependencies]
criterion = "0.5"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Vintage hardware compatibility settings
# For PowerPC G4, compile with:
#   RUSTFLAGS="-C target-cpu=g4" cargo build --release --target powerpc-apple-darwin
