[package]
name = "rustchain-address-tool"
version = "0.1.0"
edition = "2021"
description = "RustChain address generator and validator"
license = "MIT"
authors = ["sososonia-cyber"]

[dependencies]
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "rtc-address"
path = "src/main.rs"

[[bin]]
name = "rtc-validate"
path = "src/validate.rs"

[lib]
name = "rustchain_address"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
