[package]
name = "rustchain-miner"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["RustChain Contributors"]
description = "Native Rust miner for RustChain — full RIP-PoA hardware fingerprinting"
license = "MIT"
repository = "https://github.com/Scottcjn/rustchain-bounties"
homepage = "https://github.com/Scottcjn/Rustchain"
documentation = "https://github.com/Scottcjn/rustchain-bounties/tree/main/rustchain-miner"
keywords = ["blockchain", "mining", "proof-of-antiquity", "rustchain"]
categories = ["command-line-utilities", "cryptography::cryptocurrencies"]
readme = "README.md"
exclude = ["target/", ".github/", "tests/"]

[[bin]]
name = "rustchain-miner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
mac_address = "1"
rand = "0.8"
hex = "0.4"
log = "0.4"
env_logger = "0.11"
sha2 = "0.10"
sha3 = "0.10"  # For SHA3 hash function
hmac = "0.12"  # For HMAC authentication
aes-gcm = "0.10"  # For AES-GCM encryption
chacha20poly1305 = "0.10"  # For ChaCha20-Poly1305 encryption
pbkdf2 = "0.12"  # For password-based key derivation
thiserror = "1.0"  # For better error handling
chrono = "0.4"  # For time handling

[profile.release]
opt-level = 3
lto = true
strip = true
