[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain-sdk"
version = "0.1.0"
description = "Python SDK for the RustChain Proof-of-Antiquity blockchain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "darkflobi", email = "darkflobi@users.noreply.github.com"},
]
keywords = ["rustchain", "blockchain", "crypto", "vintage", "hardware", "mining"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/Scottcjn/Rustchain"
Repository = "https://github.com/Scottcjn/Rustchain"
Documentation = "https://github.com/Scottcjn/Rustchain/tree/main/sdk"

[tool.setuptools.packages.find]
include = ["rustchain_sdk*"]
