[package]
name = "wasm-miner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rustchain-core = { path = "../rustchain-miner/core" }
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["console", "WorkerGlobalScope"] }
