[package]
name = "rustchain-miner"
version = "0.1.0"
edition = "2021"
authors = ["RustChain Contributors"]
description = "Native Rust miner for the RustChain Proof-of-Antiquity network"
license = "MIT"
repository = "https://github.com/Scottcjn/Rustchain"

[[bin]]
name = "rustchain-miner"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
