[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rustchain"
version = "0.1.0"
description = "Python SDK for RustChain — Proof of Antiquity blockchain"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "RustChain Contributors"}]
keywords = ["rustchain", "blockchain", "proof-of-antiquity", "crypto"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
ws = ["websockets>=12.0"]
cli = ["click>=8.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.scripts]
rustchain = "rustchain.cli:main"

[project.urls]
Homepage = "https://github.com/Scottcjn/Rustchain"
Repository = "https://github.com/Scottcjn/Rustchain/tree/main/sdk/python"

[tool.setuptools.packages.find]
where = ["."]
include = ["rustchain*"]
