[package]
name = "floppy-witness"
version = "0.1.0"
edition = "2021"
description = "Compact epoch witness format for vintage media (floppy disks, cassettes, ZIP)"
license = "MIT"

[dependencies]
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
base64 = "0.13"
clap = { version = "3.2", features = ["derive"] }
