[package]
name = "rustchain-address-validator"
version = "0.1.0"
edition = "2021"
description = "RTC Address generator and validator for RustChain"
license = "MIT"
authors = ["sososonia-cyber"]
repository = "https://github.com/sososonia-cyber/Rustchain"

[dependencies]
bs58 = "0.5"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }

[dev-dependencies]

[[bin]]
name = "rtc-address"
path = "src/main.rs"

[lib]
name = "rustchain_address"
path = "src/lib.rs"
