[package]
name = "rustchain-cli"
version = "0.1.0"
edition = "2021"
description = "RustChain CLI - Command line wallet and toolkit"
authors = ["sososonia-cyber"]
license = "MIT"
repository = "https://github.com/sososonia-cyber/Rustchain"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
rand = "0.8"

[dev-dependencies]

[[bin]]
name = "rustchain"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
